--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -184,6 +184,7 @@
             "qa staging was broken by the package built": "Compilation Error",
             "could not checkout": "Compilation Error",
             "fatal: manifest": "Compilation Error",
+            "Build Failed:": "Compilation Error",
             
             "test result   :  -1": "Test Error: Simic",
             
