--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -27,71 +27,7 @@
         ],
         
         "error_category": {
-            "gitlab error": "Application Error: Git",
-            "could not read from remote repository": "Application Error: Git",
-            "not a git repository": "Application Error: Git",
-            "the remote end hung up unexpectedly": "Application Error: Git",
-            "unable to access 'https://gitlab.devtools.intel.com": "Connectivity Error: Git",
-            "gitlab is not responding": "Connectivity Error: Git",
-            "authentication failed for": "Connectivity Error: Git",
-            "remote: unauthorized":"Configuration Error: Git",
-            "error cloning": "Connectivity Error: Git",
-            "git clone": "Connectivity Error: Git",
-            "cloning the git-repo": "Connectivity Error: Git",
-            "error: failed to push some refs to": "Connectivity Error: Git",
-            "failed to fetch from https://gitlab": "Connectivity Error: Git",
-            "giterror": "Connectivity Error: Git",
-            "error fetching remote": "Connectivity Error: Git",
-            "an optional update for edkrepo is available and can be installed using: edkrepo update": "Configuration Error: Git",
-
-            "artifact error": "Connectivity Error: Artifactory",
-            "uploading artifacts": "Connectivity Error: Artifactory",
-            "expectation failed": "Application Error: Artifactory",
-            "dailed to search artifact": "Application Error: Artifactory",
-            "401 response message: artifactory": "Connectivity Error: Artifactory",
-            "failed to fetch some objects from 'https://ubit-artifactory": "Connectivity Error: Artifactory",
-            "could not read username for 'https://ubit-artifactory": "Connectivity Error: Artifactory",
-            "artifactory returned the following errors": "Application Error: Artifactory",
-            "service temporarily unavailable": "Application Error: Artifactory",
-            "failed to deploy file. status code: 503": "Application Error: Artifactory",
-            "http/1.1: connection reset by peer: socket write error": "Application Error: Artifactory",
-            "http/1.1: read timed out": "Connectivity Error: Artifactory",
-            "http/1.1. received status code 503 and message: service temporarily Unavailable": "Connectivity Error: Artifactory",
-            "error occurred for request ": "Application Error: Artifactory",
-            "failed to deploy file. status code: 502": "Connectivity Error: Artifactory",
-            "failed to deploy file. status code: 401": "Connectivity Error: Artifactory",
-            "caused java.io.ioexception": "Application Error: Artifactory",
-            "java.io.ioexception: error downloading https://ubit-artifactory": "Application Error: Artifactory",
-            
-            "git credentials for https://ubit-artifactory": "Application Error: GitLFS",
-            
-            "keyerror:": "Application Error: HSDES",
-            
-            "nameerror:": "Application Error",
-            "typeerror:": "Application Error",
-            "attributeerror: ": "Application Error",
-            "abortexception:": "Application Error",
-            "configuration error": "Application Error",
-            "server error": "Application Error",
-
-            "abi_warning:": "Application Error: ABI",
-            "raise abiexception": "Application Error: ABI",
-            "abi_exception": "Application Error: ABI",
-            "failed to run ticgen:": "Application Error: ABI",
-            
-            "connectionerror": "Connectivity Error",
-            "connectionrefusederror": "Connectivity Error",
-            "failed: connection":"Connectivity Error",
-            "500 internal server error": "Connectivity Error",
-            "fetcher failure for url:": "Connectivity Error",
-            "connection timed out": "Connectivity Error",
-            "with a status code of: 500": "Connectivity Error",
-            
-            "directory is not empty": "System Error",
-            "cannot load": "System Error",
-            "mandatory update for edkrepo": "System Error",
-            "loading libraries failed": "System Error",
-
+            "This is a comment which were used to segmentized the JSON for error category. It is impossible this line will match any error mesg": "Compilation Related Error",
             "nmake : fatal error" : "Compilation Error",   
             "link : fatal error": "Compilation Error",
             "error while encapsulate fd image": "Compilation Error",
@@ -185,12 +121,47 @@
             "could not checkout": "Compilation Error",
             "fatal: manifest": "Compilation Error",
             "Build Failed:": "Compilation Error",
+
+            "This is a comment which were used to segmentized the JSON for error category. It is impossible this line will match any error mesg": "Git Related Error",
+            "gitlab error": "Application Error: Git",
+            "could not read from remote repository": "Application Error: Git",
+            "not a git repository": "Application Error: Git",
+            "the remote end hung up unexpectedly": "Application Error: Git",
+            "unable to access 'https://gitlab.devtools.intel.com": "Connectivity Error: Git",
+            "gitlab is not responding": "Connectivity Error: Git",
+            "authentication failed for": "Connectivity Error: Git",
+            "remote: unauthorized":"Configuration Error: Git",
+            "error cloning": "Connectivity Error: Git",
+            "git clone": "Connectivity Error: Git",
+            "cloning the git-repo": "Connectivity Error: Git",
+            "error: failed to push some refs to": "Connectivity Error: Git",
+            "failed to fetch from https://gitlab": "Connectivity Error: Git",
+            "giterror": "Connectivity Error: Git",
+            "error fetching remote": "Connectivity Error: Git",
+            "an optional update for edkrepo is available and can be installed using: edkrepo update": "Configuration Error: Git",
+
+            "This is a comment which were used to segmentized the JSON for error category. It is impossible this line will match any error mesg": "Artifactory Related Error",
+            "artifact error": "Connectivity Error: Artifactory",
+            "uploading artifacts": "Connectivity Error: Artifactory",
+            "expectation failed": "Application Error: Artifactory",
+            "dailed to search artifact": "Application Error: Artifactory",
+            "401 response message: artifactory": "Connectivity Error: Artifactory",
+            "failed to fetch some objects from 'https://ubit-artifactory": "Connectivity Error: Artifactory",
+            "could not read username for 'https://ubit-artifactory": "Connectivity Error: Artifactory",
+            "artifactory returned the following errors": "Application Error: Artifactory",
+            "service temporarily unavailable": "Application Error: Artifactory",
+            "failed to deploy file. status code: 503": "Application Error: Artifactory",
+            "http/1.1: connection reset by peer: socket write error": "Application Error: Artifactory",
+            "http/1.1: read timed out": "Connectivity Error: Artifactory",
+            "http/1.1. received status code 503 and message: service temporarily Unavailable": "Connectivity Error: Artifactory",
+            "error occurred for request ": "Application Error: Artifactory",
+            "failed to deploy file. status code: 502": "Connectivity Error: Artifactory",
+            "failed to deploy file. status code: 401": "Connectivity Error: Artifactory",
+            "caused java.io.ioexception": "Application Error: Artifactory",
+            "java.io.ioexception: error downloading https://ubit-artifactory": "Application Error: Artifactory",
+            "git credentials for https://ubit-artifactory": "Application Error: Artifactory",
             
-            "test result   :  -1": "Test Error: Simic",
-            
-            "no such container": "System Error",
-            "there are no nodes": "System Error",
-            
+            "This is a comment which were used to segmentized the JSON for error category. It is impossible this line will match any error mesg": "Klocwork Related Error",
             "no connection could be made because the target machine actively refused it": "Connectivity Error: Klocwork",
             "cannot locate kw tools on system": "Configuration Error: klocwork",
             "cannot locate kwdeployexe on system": "Configuration Error: Klocwork",
@@ -203,10 +174,12 @@
             "source list is empty": "Application Error: Klocwork",
             "kwadmin: authentication failed": "Configuration Error: Klocwork",
             
+            "This is a comment which were used to segmentized the JSON for error category. It is impossible this line will match any error mesg": "Jenkins Related Error",
             "couldn't find any revision to build": "Configuration Error: Jenkins",
             "groovy.lang.missingpropertyexception": "Configuration Error: Jenkins",
             "errorsexception: startup failed": "Configuration Error: Jenkins",
             
+            "This is a comment which were used to segmentized the JSON for error category. It is impossible this line will match any error mesg": "BDBA Related Error",
             "httperror: 401 - no permission": "Application Error: BDBA",
             "httperror: 502 - invalid responses from another server/proxy.": "Connectivity Error: BDBA",
             "httperror: 404 - nothing matches the given uri": "Application Error: BDBA",
@@ -219,13 +192,49 @@
             "response got: unauthorized": "Connectivity Error: BDBA",
             "urlerror: [errno 10054] an existing connection was forcibly closed": "Connectivity Error: BDBA",
 
+            "This is a comment which were used to segmentized the JSON for error category. It is impossible this line will match any error mesg": "PROTEXIP Related Error",
             "bdstool: scan failed": "Application Error: Protex",
             "bdstool: login failed for": "Connectivity Error: Protex",
             "bom list error": "Application Error: Protex",
             
+            "This is a comment which were used to segmentized the JSON for error category. It is impossible this line will match any error mesg": "SNYK Related Error",
             "internal error (reference:": "Application Error: Snyk",
+
+            "This is a comment which were used to segmentized the JSON for error category. It is impossible this line will match any error mesg": "HSDES Related Error",
+            "keyerror:": "Application Error: HSDES",
+            "fail to update hsdes field": "Application Error: HSDES",
+
+            "This is a comment which were used to segmentized the JSON for error category. It is impossible this line will match any error mesg": "ABI Related Error",
+            "abi_warning:": "Application Error: ABI",
+            "raise abiexception": "Application Error: ABI",
+            "abi_exception": "Application Error: ABI",
+            "failed to run ticgen:": "Application Error: ABI",
+
+            "This is a comment which were used to segmentized the JSON for error category. It is impossible this line will match any error mesg": "Generic Application Error",
+            "nameerror:": "Application Error",
+            "typeerror:": "Application Error",
+            "attributeerror: ": "Application Error",
+            "abortexception:": "Application Error",
+            "configuration error": "Application Error",
+            "server error": "Application Error",
+
+            "This is a comment which were used to segmentized the JSON for error category. It is impossible this line will match any error mesg": "Generic Connectivity Error",
+            "connectionerror": "Connectivity Error",
+            "connectionrefusederror": "Connectivity Error",
+            "failed: connection":"Connectivity Error",
+            "500 internal server error": "Connectivity Error",
+            "fetcher failure for url:": "Connectivity Error",
+            "connection timed out": "Connectivity Error",
+            "with a status code of: 500": "Connectivity Error",
             
-            "fail to update hsdes field": "Application Error: HSDES"
+            "This is a comment which were used to segmentized the JSON for error category. It is impossible this line will match any error mesg": "Generic System Error",
+            "directory is not empty": "System Error",
+            "cannot load": "System Error",
+            "mandatory update for edkrepo": "System Error",
+            "loading libraries failed": "System Error",
+            "test result   :  -1": "Test Error: Simic",
+            "no such container": "System Error",
+            "there are no nodes": "System Error"
         },
         
         "patterns": [
