Minor update on UEFI ignore pattern.

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -479,9 +479,9 @@
             "errorlevel=0",
             "errorstop",
             "script_error= 0",
-            "checkfsperrorinfohob\checkfsperrorinfohobdxe.inf [x64]",
-            "checkfsperrorinfohobdxe.c",
             "checkfsperrorinfohob",
+            "checkfsperrorinfohobdxe.inf",
+            "checkfsperrorinfohobdxe.c",
             "checkfsperrorinfohobdxe.efi",
             "checkfsperrorinfohobdxe",
             "checkfsperrorinfohobdxe.dll",
