[SPLUNK] Update error_config.json

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -125,7 +125,7 @@
             "no rule to make target": "Compilation Error (Under Monitoring)",
             "failed: cmakefiles/hddl_bypass_shim": "Compilation Error",
             "build stopped: subcommand failed": "Compilation Error",
-            "error: modpost: "xlink_pcie_boot_device" [drivers/misc/xlink-core/xlink.ko] undefined!": "Compilation Error",
+            "[drivers/misc/xlink-core/xlink.ko] undefined!": "Compilation Error",
 
             "This is a comment which were used to segmentized the JSON for error category. It is impossible this line will match any error mesg": "Git Related Error",
             "gitlab error": "Application Error: Git",
