Added ABI error exception as first keyword

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -21,6 +21,7 @@
             "test result",
             "connectionrefusederror",
             "abi_err",
+            "ABIException",
             "java.io.ioexception",
             "ERROR messages shown, returning a non-zero exit code",
             "no rule to make target"
