--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -127,6 +127,7 @@
             "build stopped: subcommand failed": "Compilation Error",
             "[drivers/misc/xlink-core/xlink.ko] undefined!": "Compilation Error",
             "debug build: file does not exists!": "Compilation Error",
+            "ERROR messages shown, returning a non-zero exit code": "Compilation Error",
 
             "This is a comment which were used to segmentized the JSON for error category. It is impossible this line will match any error mesg": "Git Related Error",
             "gitlab error": "Application Error: Git",
