[SPLUNK] Use Jenkins job exit mesg as generic error msg

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -24,7 +24,8 @@
             "ABIException",
             "java.io.ioexception",
             "ERROR messages shown, returning a non-zero exit code",
-            "no rule to make target"
+            "no rule to make target",
+            "Finished: FAILURE"
         ],
         
         "error_category": {
