--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -7,6 +7,7 @@
             "not available",
             "not found",
             "could not checkout",
+            "running on ",
             "no such property",
             "couldn't find",
             "fatal:",
@@ -277,6 +278,7 @@
             "enoerror",
             "eusererrorcode",
             "werror",
+            "running on node:",
             "\\..\\sources\\graph",
             "error  ...",
             "acpi....",
