[SPLUNK] Add Jenkins generic error trigger from script as main keyword

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -24,9 +24,9 @@
             "abi_err",
             "ABIException",
             "java.io.ioexception",
-            "ERROR messages shown, returning a non-zero exit code",
             "no rule to make target",
-            "Finished: FAILURE"
+            "Finished: FAILURE",
+            "ERROR: script returned exit code 1"
         ],
         
         "error_category": {
