added below ignoring error pattern for windows jobs failures "symbol '__alt_data_end' not found in nm-output"

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -508,6 +508,7 @@
             "sg not matching base address",
             "xlink_secure_err",
             "mcafee antivirus defination not found"
+            "symbol '__alt_data_end' not found in nm-output"
         ]
     }
 }
