--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -194,13 +194,15 @@
             "could not read username for 'https://ubit-artifactory": "Connectivity Error: Artifactory",
             "artifactory returned the following errors": "Application Error: Artifactory",
             "service temporarily unavailable": "Application Error: Artifactory",
-            "failed to deploy file. status code: 503": "Application Error: Artifactory",
             "http/1.1: connection reset by peer: socket write error": "Application Error: Artifactory",
             "http/1.1: read timed out": "Connectivity Error: Artifactory",
             "http/1.1. received status code 503 and message: service temporarily Unavailable": "Connectivity Error: Artifactory",
             "error occurred for request ": "Application Error: Artifactory",
             "failed to deploy file. status code: 502": "Connectivity Error: Artifactory",
             "failed to deploy file. status code: 401": "Connectivity Error: Artifactory",
+            "failed to deploy file. status code: 403": "Connectivity Error: Artifactory",
+            "failed to deploy file. status code: 500": "Application Error: Artifactory",
+            "failed to deploy file. status code: 503": "Application Error: Artifactory",
             "caused java.io.ioexception": "Application Error: Artifactory",
             "java.io.ioexception: error downloading https://ubit-artifactory": "Application Error: Artifactory",
             "git credentials for https://ubit-artifactory": "Application Error: Artifactory",
