[SPLUNK] Syntax error correction

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -555,7 +555,7 @@
             "failure.log",
             "conflict.c",
             "caused: java.io.ioexception",
-            "conflicts between attempted install"
+            "conflicts between attempted install",
             "failed to generate fip_aid.bin",
             "found 0 unit-test failure"
         ]
